# pyodide-pygame

./: README.md  pyproject.toml  todo.md
js/: pygameHelper.js
pygame/: __init__.py  constants.py  display.py  draw.py  event.py  font.py  key.py  mouse.py  rect.py
pyodide_pygame/: pygame.py
